Freeze when restoring file from trash if file with same name and location exists
Steps to reproduce
1.Move a file to the trash.
2.Create a file with the same name of the file that was 'deleted'.
3.Go to trash and and try to restore the file was previously 'deleted/recycled'
4.Nautilus/File freezes.
Reproducible in:
The most recently known stable version.
Current behavior
Try doing the steps. Nautilus freezes.
Expected behavior
Maybe rename the file as 'filename'(restored) when the same file name exists when restoring the file.
Additional information
Edited by Andre Klapper