file-utilities: Don't block main thread to restore from trash

The sync variants of file operations have been introduced for use in
integration tests. The async operations have been suffixed _async().

However, likely by mistake, in the restore from trash operation, the
call has been appended _sync rather than _async. [1]

This blocks the main thread until the operation task finishes, causing
a dead lock when the operation thread needs the main thread to show a
conflict dialog. This happens when restoring a file from trash if a new
file with the same name already exists in the original location.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/790

[1] commit ab31018cdaeb1c592e1c46402c5ae1facc503151